--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/_ProductBoxList.cshtml
@@ -239,7 +239,7 @@
            }
 
            <div class="buttons pull-right">     
-                <a href='@Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } })' class="btn" title="@T("Products.Details")" rel="tooltip">
+                <a href='@Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } })' class="btn" title="@T("Products.Details")" data-toggle="tooltip">
                     <i class="fa fa-info-circle"></i>
                 </a>
                  
