--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -43,10 +43,13 @@ $btn-border-radius-lg:          3px !default;
 $btn-border-radius-sm:          2px !default;
 
 $btn-font-weight:               600;
-/*$btn-padding-x:             1.8rem;
-$btn-padding-x-sm:          1.2rem;
-$btn-padding-x-lg:          2rem;*/
-$btn-padding-y-lg:              1rem;
+$btn-padding-x:                 1rem; // 1rem
+$btn-padding-y:                 0.475rem; // 0.375rem
+$btn-padding-x-sm:              0.75rem; // 0.75rem
+$btn-padding-y-sm:              0.4rem; // 0.25rem
+$btn-padding-x-lg:              1.8rem; // 1.25rem
+$btn-padding-y-lg:              1rem; // 0.75rem
+
 
 /*$dropdown-border-color:     #ddd;
 $popover-border-color:      #ddd;
