--- a/src/Presentation/SmartStore.Web/Views/Boards/Forum.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Forum.cshtml
@@ -37,7 +37,7 @@
             
             @if (Model.ForumFeedsEnabled)
             {
-                <a href="@Url.Action("ForumRSS", new { id = @Model.Id })" class="link-rss" title="@T("Forum.ForumRSSLinkTitle")" rel="tooltip">
+                <a href="@Url.Action("ForumRSS", new { id = @Model.Id })" class="link-rss" title="@T("Forum.ForumRSSLinkTitle")" data-toggle="tooltip">
                     <i class="fa fa-rss text-muted"></i>
                     @T("Forum.RSS")
                 </a>
