--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_megamenu.scss
@@ -1,4 +1,4 @@
-﻿$mm-navlink-font-size:          1.075rem;
+﻿$mm-navlink-font-size:                  $font-size-base;
 
 .megamenu-container {
     position: relative;
