--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -21,18 +21,25 @@ $headings-line-height:          1.3;
 /*$font-family-sans-serif:    'Roboto', Helvetica, Arial, sans-serif;*/ 
 $font-family-sans-serif:        'Open Sans', sans-serif;
 
-$font-size-root:                14px;
-$font-size-base:                1rem;
-$font-size-sm:                  0.925rem;
-$font-size-xs:                  0.85rem;
+$font-size-root:                16px;
+$font-size-base:                0.875rem; // 14px
+$font-size-sm:                  0.8125rem; // 13px
+$font-size-xs:                  0.75rem; // 12px
 $line-height:                   1.8;
 $line-height-sm:                1.8;
 $line-height-lg:                1.5;
 
-$display1-size:                 6rem;
-$display2-size:                 5.5rem;
-$display3-size:                 4.5rem;
-$display4-size:                 3.5rem;
+$font-size-h1:                  2.25rem; // 2.5rem
+$font-size-h2:                  1.75rem; // 2rem
+$font-size-h3:                  1.5rem; // 1.75rem
+$font-size-h4:                  1.25rem; // 1.5rem
+$font-size-h5:                  1rem; // 1.25rem
+$font-size-h6:                  $font-size-base; // 1rem;
+
+$display1-size:                 5rem; // 6rem
+$display2-size:                 5rem; // 5.5rem
+$display3-size:                 4.5rem; // 4.5rem
+$display4-size:                 3rem; // 3.5rem
 
 $border-radius:                 3px;
 $border-radius-lg:              4px; 
