--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_shopbar.scss
@@ -148,7 +148,8 @@
 		    position: absolute; 
 		    right: -3px; 
 		    top: -3px;
-            font-size: 0.625rem; 
+            font-size: 0.6875rem;
+            border: 1px solid #fff; 
 		    /*font-size: 11px;
 		    padding-top: 1px;
 		    padding-bottom: 1px;*/
