--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -23,8 +23,9 @@ $font-family-sans-serif:        'Open Sans', sans-serif;
 
 $font-size-root:                16px;
 $font-size-base:                0.875rem; // 14px
-$font-size-sm:                  0.8125rem; // 13px
-$font-size-xs:                  0.75rem; // 12px
+$font-size-lg:                  1rem; // 1.25rem (16px)
+$font-size-sm:                  0.8125rem; // .875rem (13px)
+$font-size-xs:                  0.75rem; // .75rem (12px)
 $line-height:                   1.8;
 $line-height-sm:                1.8;
 $line-height-lg:                1.5;
@@ -51,11 +52,11 @@ $btn-border-radius-sm:          2px !default;
 
 $btn-font-weight:               600;
 $btn-padding-x:                 1rem; // 1rem
-$btn-padding-y:                 0.475rem; // 0.375rem
+$btn-padding-y:                 0.5rem; // 0.375rem
 $btn-padding-x-sm:              0.75rem; // 0.75rem
-$btn-padding-y-sm:              0.4rem; // 0.25rem
-$btn-padding-x-lg:              1.8rem; // 1.25rem
-$btn-padding-y-lg:              1rem; // 0.75rem
+$btn-padding-y-sm:              0.375rem; // 0.25rem
+$btn-padding-x-lg:              1.5rem; // 1.25rem
+$btn-padding-y-lg:              0.8725rem; // 0.75rem
 
 
 /*$dropdown-border-color:     #ddd;
@@ -192,6 +193,10 @@ body {
     }
 }
 
+.tooltip {
+    font-size: $font-size-sm;
+}
+
 
 
 //
@@ -252,8 +257,8 @@ body {
 .menubar-link,
 .nav-link,
 .dropdown-item {
-    > .fa + span { padding-left: 0.4em; }
-    > span + .fa { margin-left: 0.4em; }
+    > .fa + span, .fa + em { padding-left: 0.4em; }
+    > span + .fa, em + .fa { margin-left: 0.4em; }
 }
 
 
