--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.cshtml
@@ -6,9 +6,6 @@
 
 @{
 	var id = "artlist-" + CommonHelper.GenerateRandomDigitCode(10);
-	var maxPictureSize = Model.Items.Select(x => x.Picture)
-		.Where(x => x != null)
-		.Max(x => x.Size);
 
 	// TODO: (mc) Fetch this from the (new) parent model or the product category
 	var thumbAspectRatio = EngineContext.Current.Resolve<MediaSettings>().DefaultThumbnailAspectRatio;
@@ -53,13 +50,20 @@
 	</style>
 }
 
-@if (Model.ViewMode == ProductSummaryViewMode.List && maxPictureSize.HasValue)
+@if (Model.ViewMode == ProductSummaryViewMode.List)
 {
-	<style type="text/css">
+	var maxPictureSize = Model.ThumbSize ?? Model.Items.Select(x => x.Picture)
+		.Where(x => x != null)
+		.Max(x => x.Size);
+
+	if (maxPictureSize.HasValue)
+	{
+		<style type="text/css">
 		#@id .art-picture-block {
 			width: @("{0}px".FormatInvariant(maxPictureSize.Value));
 		}
-	</style>
+		</style>
+	}
 }
 
 @if (hasActions)
